<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_Title_Resolution">Resolution</string>
    <string name="Abb_Title_badge_labs">LABS</string>
    <string name="COLOR_TUNE_CUSTOM">Manual</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="ISO_100">100</string>
    <string name="ISO_125">125</string>
    <string name="ISO_160">160</string>
    <string name="ISO_1600">1600</string>
    <string name="ISO_200">200</string>
    <string name="ISO_250">250</string>
    <string name="ISO_320">320</string>
    <string name="ISO_3200">3200</string>
    <string name="ISO_400">400</string>
    <string name="ISO_50">50</string>
    <string name="ISO_500">500</string>
    <string name="ISO_64">64</string>
    <string name="ISO_640">640</string>
    <string name="ISO_80">80</string>
    <string name="ISO_800">800</string>
    <string name="KELVIN_VALUE_10000K">10000K</string>
    <string name="KELVIN_VALUE_2300K">2300K</string>
    <string name="KELVIN_VALUE_2400K">2400K</string>
    <string name="KELVIN_VALUE_2500K">2500K</string>
    <string name="KELVIN_VALUE_2600K">2600K</string>
    <string name="KELVIN_VALUE_2700K">2700K</string>
    <string name="KELVIN_VALUE_2800K">2800K</string>
    <string name="KELVIN_VALUE_2900K">2900K</string>
    <string name="KELVIN_VALUE_3000K">3000K</string>
    <string name="KELVIN_VALUE_3100K">3100K</string>
    <string name="KELVIN_VALUE_3200K">3200K</string>
    <string name="KELVIN_VALUE_3300K">3300K</string>
    <string name="KELVIN_VALUE_3400K">3400K</string>
    <string name="KELVIN_VALUE_3500K">3500K</string>
    <string name="KELVIN_VALUE_3600K">3600K</string>
    <string name="KELVIN_VALUE_3700K">3700K</string>
    <string name="KELVIN_VALUE_3800K">3800K</string>
    <string name="KELVIN_VALUE_3900K">3900K</string>
    <string name="KELVIN_VALUE_4000K">4000K</string>
    <string name="KELVIN_VALUE_4100K">4100K</string>
    <string name="KELVIN_VALUE_4200K">4200K</string>
    <string name="KELVIN_VALUE_4300K">4300K</string>
    <string name="KELVIN_VALUE_4400K">4400K</string>
    <string name="KELVIN_VALUE_4500K">4500K</string>
    <string name="KELVIN_VALUE_4600K">4600K</string>
    <string name="KELVIN_VALUE_4700K">4700K</string>
    <string name="KELVIN_VALUE_4800K">4800K</string>
    <string name="KELVIN_VALUE_4900K">4900K</string>
    <string name="KELVIN_VALUE_5000K">5000K</string>
    <string name="KELVIN_VALUE_5100K">5100K</string>
    <string name="KELVIN_VALUE_5200K">5200K</string>
    <string name="KELVIN_VALUE_5300K">5300K</string>
    <string name="KELVIN_VALUE_5400K">5400K</string>
    <string name="KELVIN_VALUE_5500K">5500K</string>
    <string name="KELVIN_VALUE_5600K">5600K</string>
    <string name="KELVIN_VALUE_5700K">5700K</string>
    <string name="KELVIN_VALUE_5800K">5800K</string>
    <string name="KELVIN_VALUE_5900K">5900K</string>
    <string name="KELVIN_VALUE_6000K">6000K</string>
    <string name="KELVIN_VALUE_6100K">6100K</string>
    <string name="KELVIN_VALUE_6200K">6200K</string>
    <string name="KELVIN_VALUE_6300K">6300K</string>
    <string name="KELVIN_VALUE_6400K">6400K</string>
    <string name="KELVIN_VALUE_6500K">6500K</string>
    <string name="KELVIN_VALUE_6600K">6600K</string>
    <string name="KELVIN_VALUE_6700K">6700K</string>
    <string name="KELVIN_VALUE_6800K">6800K</string>
    <string name="KELVIN_VALUE_6900K">6900K</string>
    <string name="KELVIN_VALUE_7000K">7000K</string>
    <string name="KELVIN_VALUE_7100K">7100K</string>
    <string name="KELVIN_VALUE_7200K">7200K</string>
    <string name="KELVIN_VALUE_7300K">7300K</string>
    <string name="KELVIN_VALUE_7400K">7400K</string>
    <string name="KELVIN_VALUE_7500K">7500K</string>
    <string name="KELVIN_VALUE_7600K">7600K</string>
    <string name="KELVIN_VALUE_7700K">7700K</string>
    <string name="KELVIN_VALUE_7800K">7800K</string>
    <string name="KELVIN_VALUE_7900K">7900K</string>
    <string name="KELVIN_VALUE_8000K">8000K</string>
    <string name="KELVIN_VALUE_8100K">8100K</string>
    <string name="KELVIN_VALUE_8200K">8200K</string>
    <string name="KELVIN_VALUE_8300K">8300K</string>
    <string name="KELVIN_VALUE_8400K">8400K</string>
    <string name="KELVIN_VALUE_8500K">8500K</string>
    <string name="KELVIN_VALUE_8600K">8600K</string>
    <string name="KELVIN_VALUE_8700K">8700K</string>
    <string name="KELVIN_VALUE_8800K">8800K</string>
    <string name="KELVIN_VALUE_8900K">8900K</string>
    <string name="KELVIN_VALUE_9000K">9000K</string>
    <string name="KELVIN_VALUE_9100K">9100K</string>
    <string name="KELVIN_VALUE_9200K">9200K</string>
    <string name="KELVIN_VALUE_9300K">9300K</string>
    <string name="KELVIN_VALUE_9400K">9400K</string>
    <string name="KELVIN_VALUE_9500K">9500K</string>
    <string name="KELVIN_VALUE_9600K">9600K</string>
    <string name="KELVIN_VALUE_9700K">9700K</string>
    <string name="KELVIN_VALUE_9800K">9800K</string>
    <string name="KELVIN_VALUE_9900K">9900K</string>
    <string name="MF_0_0">0.0</string>
    <string name="MF_0_1">0.1</string>
    <string name="MF_0_2">0.2</string>
    <string name="MF_0_3">0.3</string>
    <string name="MF_0_4">0.4</string>
    <string name="MF_0_5">0.5</string>
    <string name="MF_0_6">0.6</string>
    <string name="MF_0_7">0.7</string>
    <string name="MF_0_8">0.8</string>
    <string name="MF_0_9">0.9</string>
    <string name="MF_1_0">1.0</string>
    <string name="MULTI_RECORDING_SAVE_OPTION_MULTI">Save front and rear videos separately</string>
    <string name="MULTI_RECORDING_SAVE_OPTION_SINGLE">Save video as previewed</string>
    <string name="MULTI_RECORDING_TYPE_PIP">Picture-in-picture view</string>
    <string name="MULTI_RECORDING_TYPE_SINGLE">Single view</string>
    <string name="MULTI_RECORDING_TYPE_SPLIT">Split view</string>
    <string name="M_CENTER_WEIGHTED">Center-weighted metering</string>
    <string name="M_MATRIX">Matrix metering</string>
    <string name="M_SPOT">Spot metering</string>
    <string name="OPTION_OFF">Off</string>
    <string name="OPTION_ON">On</string>
    <string name="Title_Advanced_Recording_Options">Advanced video options</string>
    <string name="Title_Camcorder_HDR10">HDR10+ videos</string>
    <string name="Title_Camcorder_Zoom_In_Mic">Zoom-in mic</string>
    <string name="Title_Heif">High efficiency pictures</string>
    <string name="Title_Raw_File">RAW copies</string>
    <string name="Title_Recording_360_BT_Mic">360 recording BT mic</string>
    <string name="Title_SaveOptions">Advanced picture options</string>
    <string name="Title_Watermark">Watermark</string>
    <string name="Title_audio_playback">Audio Playback</string>
    <string name="Title_camcorder_hlg">HDR</string>
    <string name="Title_high_bitrate_video">High bitrate videos</string>
    <string name="Title_high_efficiency_video">High efficiency videos</string>
    <string name="Title_log_video">Log</string>
    <string name="Title_motion_photo">Motion photo capture</string>
    <string name="Title_picture_format">Pro mode picture format</string>
    <string name="Title_video_format">Video format</string>
    <string name="Title_video_format_h264">H.264 (Most compatible)</string>
    <string name="Title_video_format_hevc">HEVC (High efficiency)</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="camcorder_HDR10_summary">"Optimize the contrast and color of rear camera videos recorded in Video and Pro video modes. Some apps and websites don't support HDR10+."</string>
    <string name="camcorder_front_HEVC_summary">"Save space without sacrificing video quality. The results will be saved in HEVC format, which some apps and websites don't support."</string>
    <string name="camcorder_hlg_summary">Capture a wider range of color and contrast by recording in 10-bit HDR, which is compatible with most apps and devices.</string>
    <string name="camcorder_zoom_in_mic_summary">Match the mic zoom to the camera zoom while recording in Video mode.</string>
    <string name="cancel">CANCEL</string>
    <string name="dep_advanced_videos">dep_advanced_videos</string>
    <string name="dep_empty">dep_empty</string>
    <string name="dep_motion_photo_capture_mode">dep_motion_photo_capture_mode</string>
    <string name="dep_save_options">dep_save_options</string>
    <string name="dep_video_format">dep_video_format</string>
    <string name="dep_widget_camera_shape">dep_widget_camera_shape</string>
    <string name="dep_widget_custom_camera">dep_widget_custom_camera</string>
    <string name="done">DONE</string>
    <string name="heif_format_summary">"Save space by capturing Photo mode pictures in high efficiency image format (HEIF). Some apps and websites don't support HEIF pictures."</string>
    <string name="high_bitrate_video_summary">Increase the bitrate of videos recorded in Video and Pro video modes. High bitrate videos are saved in HEVC format and may be larger than normal videos.</string>
    <string name="key_audio_playback">audio_playback</string>
    <string name="key_hdr10_recording">hdr10_recording</string>
    <string name="key_heif">heif</string>
    <string name="key_hevc">hevc</string>
    <string name="key_high_bitrate_video">high_bitrate_video</string>
    <string name="key_hlg">hlg</string>
    <string name="key_log_video">log_video</string>
    <string name="key_motion_photo_shutter">motion_photo_capture_mode</string>
    <string name="key_picture_format">picture_format</string>
    <string name="key_recording_360_bt_mic">recording_360_bt_mic</string>
    <string name="key_video_format_h264">video_format_h264</string>
    <string name="key_video_format_hevc">video_format_hevc</string>
    <string name="key_widget_settings_custom_camera_background">widget_settings_custom_camera_background</string>
    <string name="key_widget_settings_custom_camera_save_to">widget_settings_custom_camera_save_to</string>
    <string name="key_widget_settings_custom_camera_shape">widget_settings_custom_camera_shape</string>
    <string name="key_widget_settings_custom_camera_starting_mode">widget_settings_custom_camera_starting_mode</string>
    <string name="key_widget_settings_custom_camera_title">widget_settings_custom_camera_title</string>
    <string name="key_widget_settings_custom_camera_watermark">widget_settings_custom_camera_watermark</string>
    <string name="key_zoom_in_mic">zoom_in_mic</string>
    <string name="my_filter_help_guide_description">Resize reference area</string>
    <string name="okay">OK</string>
    <string name="picture_format_summary">"Save both JPEG and RAW copies of pictures taken in Pro mode. Color tone adjustments won't be shown in RAW copies."</string>
    <string name="recording_360_BT_mic_summary">When BT is connected that can record 360, it is automatically recorded as BT MIC.</string>
    <string name="save">SAVE</string>
    <string name="selfie_tone_bright">Bright</string>
    <string name="selfie_tone_natural">Natural</string>
    <string name="tts_close">Close</string>
    <string name="widget_setting_custom_camera_background">Widget background</string>
    <string name="widget_setting_custom_camera_crop_description">Edit background image</string>
    <string name="widget_setting_custom_camera_preview_description">Widget preview</string>
    <string name="widget_setting_custom_camera_save_to">Save pictures and videos to</string>
    <string name="widget_setting_custom_camera_shape">Shape</string>
    <string name="widget_setting_custom_camera_starting_mode">Starting mode</string>
    <string name="widget_setting_custom_camera_title">Title on widget</string>
    <string name="widget_setting_title">Widget settings</string>
</resources>