<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:theme="@style/Theme.AppCompat.DayNight" android:orientation="vertical" android:id="@id/listview" android:background="@color/theme_bg_color" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/widget_setting_button_height" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/widget_setting_title_layout_height" android:layout_marginTop="@dimen/widget_setting_top_margin" android:layout_marginStart="@dimen/widget_setting_title_layout_start_margin" android:layout_marginEnd="@dimen/winset_list_item_end_padding">
            <TextView android:textSize="@dimen/widget_setting_title_text_size" android:textColor="@color/action_bar_title_text_color" android:ellipsize="end" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/widget_setting_title" android:maxLines="1" style="@style/SecBold" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:orientation="vertical" android:id="@id/setting_image_layer" android:layout_width="fill_parent" android:layout_height="@dimen/widget_setting_preview_layout_height" android:layout_marginHorizontal="@dimen/widget_setting_preview_layout_side_margin">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/image_background" android:background="@drawable/widget_background_border" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:clipToOutline="true" />
                <FrameLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/image_group" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/widget_setting_custom_camera_preview_description">
                    <include android:layout_gravity="center" android:id="@id/widget_small_image_layout" android:visibility="gone" android:layout_width="@dimen/widget_small_width" android:layout_height="@dimen/widget_small_height" layout="@layout/camera_widget_small" />
                    <include android:layout_gravity="center" android:id="@id/widget_medium_image_layout" android:visibility="gone" android:layout_width="@dimen/widget_medium_width" android:layout_height="@dimen/widget_medium_height" layout="@layout/camera_widget_medium" />
                    <include android:layout_gravity="center" android:id="@id/widget_medium_image_irregular_type_1_layout" android:visibility="gone" android:layout_width="@dimen/widget_medium_width" android:layout_height="@dimen/widget_medium_height" layout="@layout/camera_widget_medium_irregular_type_1" />
                    <include android:layout_gravity="center" android:id="@id/widget_medium_image_irregular_type_2_layout" android:visibility="gone" android:layout_width="@dimen/widget_medium_width" android:layout_height="@dimen/widget_medium_height" layout="@layout/camera_widget_medium_irregular_type_2" />
                    <include android:layout_gravity="center" android:id="@id/widget_large_image_layout" android:visibility="gone" android:layout_width="@dimen/widget_large_width" android:layout_height="@dimen/widget_large_height" layout="@layout/camera_widget_large" />
                </FrameLayout>
                <ImageView android:layout_gravity="end|bottom" android:id="@id/crop_image_button" android:visibility="invisible" android:layout_width="@dimen/widget_crop_image_button_size" android:layout_height="@dimen/widget_crop_image_button_size" android:layout_marginBottom="@dimen/widget_crop_image_bottom_margin" android:src="@drawable/widget_btn_crop" android:contentDescription="@string/widget_setting_custom_camera_crop_description" android:layout_marginEnd="@dimen/widget_crop_image_end_margin" />
            </FrameLayout>
        </LinearLayout>
        <androidx.core.widget.NestedScrollView android:id="@id/nestedScrollView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="always">
            <LinearLayout android:orientation="vertical" android:id="@id/fragment_container_layout" android:background="@color/theme_list_color" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/widget_button_bg_color" android:layout_width="fill_parent" android:layout_height="@dimen/widget_setting_button_height" android:layout_alignParentBottom="true" app:layout_constraintBottom_toBottomOf="parent">
        <Button android:textSize="@dimen/widget_setting_button_text_size" android:textColor="@color/bottom_bar_text_color" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/widget_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="false" android:textAlignment="center" android:paddingEnd="0.0dip" android:layout_marginStart="@dimen/winset_list_item_end_padding" android:layout_marginVertical="@dimen/widget_setting_button_vertical_margin" style="@style/SecSemiBold" />
        <Button android:textSize="@dimen/widget_setting_button_text_size" android:textColor="@color/bottom_bar_text_color" android:gravity="center" android:id="@id/btn_save" android:background="@drawable/widget_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/save" android:layout_weight="1.0" android:textAllCaps="false" android:textAlignment="center" android:paddingStart="0.0dip" android:layout_marginEnd="@dimen/winset_list_item_end_padding" android:layout_marginVertical="@dimen/widget_setting_button_vertical_margin" style="@style/SecSemiBold" />
    </LinearLayout>
</RelativeLayout>
