<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/crop_main" android:fitsSystemWindows="true" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/quick_setting_indicator_guideline" android:layout_width="wrap_content" android:layout_height="0.0dip" app:layout_constraintGuide_percent="@integer/quick_setting_indicator_guideline_percent" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/help_guide_text_layout" android:layout_width="0.0dip" android:layout_height="@dimen/my_filter_help_guide_text_layout_height" android:layout_marginTop="@dimen/my_filter_help_guide_text_layout_margin_top" android:layout_marginHorizontal="@dimen/my_filter_layout_horizontal_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0">
        <TextView android:textSize="@dimen/my_filter_help_guide_text_size" android:textColor="@color/my_filter_help_guide_text_color" android:id="@id/help_guide_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_filter_help_guide_description" android:maxLines="2" android:textAlignment="center" style="@style/SecSemiBold" />
    </LinearLayout>
    <FrameLayout android:orientation="horizontal" android:id="@id/crop_root_layout" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/my_filter_layout_vertical_margin" android:layout_marginBottom="@dimen/my_filter_layout_bottom_margin" android:layout_marginHorizontal="@dimen/my_filter_layout_horizontal_margin" app:layout_constraintBottom_toTopOf="@id/button_group" app:layout_constraintTop_toBottomOf="@id/help_guide_text_layout">
        <com.sec.android.app.camera.cropper.view.MyFilterImageView android:layout_gravity="center" android:id="@id/crop_image_view" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/button_group" android:layout_width="fill_parent" android:layout_height="@dimen/crop_button_layout_height" android:layout_marginStart="@dimen/crop_button_side_margin" android:layout_marginEnd="@dimen/crop_button_side_margin" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="0.5" style="@style/CropButtonStyle" />
        <Button android:id="@id/btn_done" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/done" android:layout_weight="0.5" style="@style/CropButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
