<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/smart_tips_view_group" android:tag="layout/popup_smart_tips_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/close_button" android:background="@drawable/default_ripple_effect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/camera_toast_close" android:contentDescription="@string/tts_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/smart_tips_text_box_title_font_size" android:textColor="@color/default_text_color" android:id="@id/title" android:paddingTop="@dimen/smart_tips_default_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/smart_tips_default_padding" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/SecSemiBold" />
    <TextView android:textSize="@dimen/smart_tips_text_box_description_font_size" android:textColor="@color/default_text_color" android:id="@id/description" android:padding="@dimen/smart_tips_default_padding" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/smart_tips_main_image" style="@style/SecRegular" />
    <ImageView android:id="@id/smart_tips_main_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/smart_tips_main_image_top_margin" android:contentDescription="@null" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/smart_tips_sub_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@null" android:layout_marginStart="@dimen/smart_tips_text_box_night_suggestion_arrow_start_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/description" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/smart_tips_text_box_title_font_size" android:textColor="@color/default_text_color" android:id="@id/text_button" android:tag="binding_1" android:background="@drawable/popup_smart_tips_text_button_ripple" android:paddingTop="@dimen/smart_tips_link_button_top_padding" android:paddingBottom="@dimen/smart_tips_link_button_bottom_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/smart_tips_link_button_top_margin" android:layout_marginBottom="@dimen/smart_tips_link_button_bottom_margin" android:contentDescription="@string/okay" android:layout_marginStart="@dimen/smart_tips_link_button_left_margin" android:layout_marginEnd="@dimen/smart_tips_link_button_right_margin" android:paddingHorizontal="@dimen/smart_tips_link_button_side_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/description" style="@style/SecSemiBold" />
    <RadioGroup android:gravity="end" android:orientation="horizontal" android:id="@id/radio_group" android:paddingTop="@dimen/smart_tips_selfie_tone_radio_group_padding_top" android:paddingBottom="@dimen/smart_tips_selfie_tone_radio_group_padding_bottom" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="@dimen/smart_tips_selfie_tone_radio_group_padding_end" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/description">
        <RadioButton android:textSize="@dimen/smart_tips_default_radio_button_font_size" android:textColor="@color/default_text_color" android:id="@id/radio_button_1" android:tag="binding_2" android:background="@drawable/popup_smart_tips_radio_button_ripple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/camera_settings_radio_button_selector" android:text="@string/selfie_tone_natural" android:paddingStart="@dimen/smart_tips_selfie_tone_radio_button_text_side_margin" android:layout_marginEnd="@dimen/smart_tips_selfie_tone_radio_button_inner_margin" style="@style/SecSemiBold" />
        <RadioButton android:textSize="@dimen/smart_tips_default_radio_button_font_size" android:textColor="@color/default_text_color" android:id="@id/radio_button_2" android:tag="binding_3" android:background="@drawable/popup_smart_tips_radio_button_ripple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/camera_settings_radio_button_selector" android:text="@string/selfie_tone_bright" android:paddingStart="@dimen/smart_tips_selfie_tone_radio_button_text_side_margin" style="@style/SecSemiBold" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
